--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="17" />
 
     <application
+        android:name="com.nexuspad.app.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -23,7 +24,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.nexuspad.home.ui.activity.DashboardActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="com.nexuspad.home.ui.activity.MainPhoneActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.nexuspad.home.ui.activity.LoginActivity"
             android:label="@string/app_name" />
     </application>
 
