--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,14 +26,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.nexuspad.home.ui.activity.LoginActivity"
+            android:label="@string/app_name" />
+        <activity
             android:name="com.nexuspad.home.ui.activity.DashboardActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.nexuspad.home.ui.activity.MainPhoneActivity"
-            android:label="@string/app_name" />
-        <activity
-            android:name="com.nexuspad.home.ui.activity.LoginActivity"
+            android:name="com.nexuspad.bookmark.ui.activity.BookmarksActivity"
             android:label="@string/app_name" />
     </application>
 
