--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <activity
             android:name="com.nexuspad.bookmark.ui.activity.BookmarksActivity"
-            android:label="@string/app_name" />
+            android:label="@string/bookmarks" />
     </application>
 
 </manifest>
