fixed: PopupMenu bugs on 3.0+ devices, margins of lists; new: Edit/New screen for entries/bookmarks; a few refactorings; started the Docs module

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,12 @@
         <activity
             android:name="com.nexuspad.bookmark.ui.activity.BookmarksActivity"
             android:label="@string/bookmarks" />
+        <activity
+            android:name="com.nexuspad.bookmark.ui.activity.BookmarkActivity"
+            android:label="@string/bookmark" />
+        <activity
+            android:name="com.nexuspad.bookmark.ui.activity.NewBookmarkActivity"
+            android:label="@string/bookmark" />
     </application>
 
 </manifest>
