--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,8 @@
 
 # Project target.
 target=android-17
-android.library.reference.3=../EdmondAppsAndroidUtils
-android.library.reference.4=../libs/android-times-square-master/library
-android.library.reference.1=../ActionBarSherlock
-android.library.reference.2=../NexusPadCore
+android.library.reference.3=..\\libs\\android-times-square-master\\library
+android.library.reference.4=..\\ActionBarSherlock
+android.library.reference.1=..\\NexusPadCore
+android.library.reference.2=..\\EdmondAppsAndroidUtils
+android.library.reference.5=../git/download/ShoppingList/shoppinglist/ShoppingList
