--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,14 +33,17 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.nexuspad.bookmark.ui.activity.BookmarksActivity"
-            android:label="@string/bookmarks" />
-        <activity
             android:name="com.nexuspad.bookmark.ui.activity.BookmarkActivity"
             android:label="@string/bookmark" />
         <activity
+            android:name="com.nexuspad.bookmark.ui.activity.BookmarksActivity"
+            android:label="@string/bookmarks" />
+        <activity
             android:name="com.nexuspad.bookmark.ui.activity.NewBookmarkActivity"
             android:label="@string/bookmark" />
+        <activity
+            android:name="com.nexuspad.doc.ui.activity.DocsActivity"
+            android:label="@string/docs" />
     </application>
 
 </manifest>
