--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,4 @@ target=android-17
 android.library.reference.3=..\\NexusPadCore
 android.library.reference.1=..\\ActionBarSherlock
 android.library.reference.2=..\\EdmondAppsAndroidUtils
+android.library.reference.4=../NineOldAndroids
