please see commit comments

--- a/project.properties
+++ b/project.properties
@@ -16,4 +16,4 @@ android.library.reference.3=..\\NexusPadCore
 android.library.reference.1=..\\ActionBarSherlock
 android.library.reference.2=..\\EdmondAppsAndroidUtils
 android.library.reference.4=..\\NineOldAndroids
-android.library.reference.5=../libs/cwac-richedit
+android.library.reference.5=..\\libs\\cwac-richedit
