--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:label="@string/app_name" >
         </activity>
         <activity
+            android:name="com.nexuspad.about.activity.AboutActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="com.nexuspad.bookmark.ui.activity.BookmarkActivity"
             android:label="@string/bookmark" />
         <activity
@@ -72,6 +76,16 @@
         <activity
             android:name="com.nexuspad.journal.ui.activity.JournalActivity"
             android:label="@string/journal" />
+        <activity
+            android:name="com.nexuspad.photos.ui.activity.PhotosActivity"
+            android:label="@string/photos" />
+        <activity
+            android:name="com.nexuspad.photos.ui.activity.PhotoActivity"
+            android:label="@string/photos"
+            android:theme="@style/Transparent" />
+        <activity
+            android:name="com.nexuspad.photos.ui.activity.PhotosPagerActivity"
+            android:label="@string/photos" />
         <activity
             android:name="com.nexuspad.ui.activity.NewFolderActivity"
             android:label="@string/new_folder" />
