--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <service
+            android:name="com.nexuspad.photos.service.PhotosUploadService"
+            android:exported="false" >
+        </service>
+
+        <activity
+            android:name="com.ipaulpro.afilechooser.FileChooserActivity"
+            android:icon="@drawable/ic_chooser"
+            android:label="@string/choose_file" >
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+        </activity>
         <activity
             android:name="com.nexuspad.home.ui.activity.MainActivity"
             android:label="@string/app_name" >
