--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,4 @@ android.library.reference.1=..\\ActionBarSherlock
 android.library.reference.2=..\\EdmondAppsAndroidUtils
 android.library.reference.4=..\\NineOldAndroids
 android.library.reference.5=..\\libs\\cwac-richedit
+android.library.reference.6=../libs/aFileChooser/aFileChooser
