--- a/project.properties
+++ b/project.properties
@@ -12,9 +12,7 @@
 
 # Project target.
 target=android-17
-android.library.reference.3=..\\NexusPadCore
-android.library.reference.1=..\\ActionBarSherlock
-android.library.reference.2=..\\EdmondAppsAndroidUtils
-android.library.reference.4=..\\NineOldAndroids
-android.library.reference.5=..\\libs\\cwac-richedit
-android.library.reference.6=../libs/aFileChooser/aFileChooser
+android.library.reference.1=../NexusPadCore
+android.library.reference.2=../libs/aFileChooser/aFileChooser
+android.library.reference.3=../libs/cwac-richedit
+
