--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <service
-            android:name="com.nexuspad.photos.service.PhotosUploadService"
+            android:name="com.nexuspad.photos.service.PhotoUploadService"
             android:exported="false" >
         </service>
 
@@ -101,6 +101,9 @@
             android:name="com.nexuspad.photos.ui.activity.PhotoActivity"
             android:label="@string/photos"
             android:theme="@style/Transparent" />
+        <activity
+            android:name="com.nexuspad.photos.ui.activity.PhotosUploadActivity"
+            android:label="@string/photos_upload" />
         <activity
             android:name="com.nexuspad.ui.activity.NewFolderActivity"
             android:label="@string/new_folder" />
