--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -103,7 +103,25 @@
             android:theme="@style/Transparent" />
         <activity
             android:name="com.nexuspad.photos.ui.activity.PhotosUploadActivity"
-            android:label="@string/photos_upload" />
+            android:label="@string/photos_upload" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="image/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND_MULTIPLE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="image/*" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.nexuspad.photos.ui.activity.AlbumActivity"
+            android:label="@string/photos" />
         <activity
             android:name="com.nexuspad.ui.activity.NewFolderActivity"
             android:label="@string/new_folder" />
