--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,133 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nexuspad"
-    android:versionCode="1"
-    android:versionName="1.0" >
+          package="com.nexuspad"
+          android:versionCode="1"
+          android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="17"/>
 
     <permission
         android:name="com.nexuspad.core.permission.LISTEN_ENTRY_CHANGES"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature"/>
     <permission
         android:name="com.nexuspad.core.permission.LISTEN_FOLDER_CHANGES"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.nexuspad.core.permission.LISTEN_ENTRY_CHANGES" />
-    <uses-permission android:name="com.nexuspad.core.permission.LISTEN_FOLDER_CHANGES" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.nexuspad.core.permission.LISTEN_ENTRY_CHANGES"/>
+    <uses-permission android:name="com.nexuspad.core.permission.LISTEN_FOLDER_CHANGES"/>
 
     <application
         android:name="com.nexuspad.app.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <service
             android:name="com.nexuspad.photos.service.PhotoUploadService"
-            android:exported="false" >
+            android:exported="false">
         </service>
-
-        <activity
-            android:name="com.ipaulpro.afilechooser.FileChooserActivity"
-            android:icon="@drawable/ic_chooser"
-            android:label="@string/choose_file" >
-            <intent-filter>
-                <action android:name="android.intent.action.GET_CONTENT" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.OPENABLE" />
-
-                <data android:mimeType="*/*" />
-            </intent-filter>
-        </activity>
         <activity
             android:name="com.nexuspad.home.ui.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name="com.nexuspad.home.ui.activity.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Sherlock.Light.NoActionBar" />
+            android:theme="@style/Theme.Sherlock.Light.NoActionBar"/>
         <activity
             android:name="com.nexuspad.home.ui.activity.DashboardActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name="com.nexuspad.about.activity.AboutActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
         </activity>
         <activity
             android:name="com.nexuspad.bookmark.ui.activity.BookmarkActivity"
-            android:label="@string/bookmark" />
+            android:label="@string/bookmark"/>
         <activity
             android:name="com.nexuspad.bookmark.ui.activity.BookmarksActivity"
-            android:label="@string/bookmarks" />
+            android:label="@string/bookmarks"/>
         <activity
             android:name="com.nexuspad.bookmark.ui.activity.NewBookmarkActivity"
             android:exported="true"
-            android:label="@string/bookmark" >
+            android:label="@string/bookmark">
             <intent-filter>
-                <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.SEND"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
 
-                <data android:mimeType="*/*" />
+                <data android:mimeType="*/*"/>
             </intent-filter>
         </activity>
         <activity
             android:name="com.nexuspad.doc.ui.activity.DocActivity"
-            android:label="@string/docs" />
+            android:label="@string/docs"/>
         <activity
             android:name="com.nexuspad.doc.ui.activity.DocsActivity"
-            android:label="@string/docs" />
+            android:label="@string/docs"/>
         <activity
             android:name="com.nexuspad.doc.ui.activity.NewDocActivity"
-            android:label="@string/docs" />
+            android:label="@string/docs"/>
         <activity
             android:name="com.nexuspad.journal.ui.activity.JournalActivity"
-            android:label="@string/journal" />
+            android:label="@string/journal"/>
         <activity
             android:name="com.nexuspad.photos.ui.activity.PhotosActivity"
-            android:label="@string/photos" />
+            android:label="@string/photos"/>
         <activity
             android:name="com.nexuspad.photos.ui.activity.PhotoActivity"
             android:label="@string/photos"
-            android:theme="@style/Transparent" />
+            android:theme="@style/Transparent"/>
         <activity
             android:name="com.nexuspad.photos.ui.activity.PhotosUploadActivity"
-            android:label="@string/photos_upload" >
+            android:label="@string/photos_upload">
             <intent-filter>
-                <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.SEND"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
 
-                <data android:mimeType="image/*" />
+                <data android:mimeType="image/*"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.SEND_MULTIPLE" />
+                <action android:name="android.intent.action.SEND_MULTIPLE"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
 
-                <data android:mimeType="image/*" />
+                <data android:mimeType="image/*"/>
             </intent-filter>
         </activity>
         <activity
             android:name="com.nexuspad.photos.ui.activity.AlbumActivity"
-            android:label="@string/photos" />
+            android:label="@string/photos"/>
+        <activity
+            android:name="com.nexuspad.photos.ui.activity.NewAlbumActivity"
+            android:label="@string/new_albums"/>
         <activity
             android:name="com.nexuspad.ui.activity.NewFolderActivity"
-            android:label="@string/new_folder" />
+            android:label="@string/new_folder"/>
         <activity
             android:name="com.nexuspad.ui.activity.FoldersActivity"
-            android:label="@string/folders" />
+            android:label="@string/folders"/>
     </application>
 
 </manifest>
