fully functional album creation/update; please see details at issue #28

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -111,7 +111,7 @@
             android:label="@string/photos" />
         <activity
             android:name="com.nexuspad.photos.ui.activity.NewAlbumActivity"
-            android:label="@string/new_albums" />
+            android:label="@string/new_album" />
 
         <activity
             android:name="com.nexuspad.contacts.ui.activity.ContactsActivity"
