--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,10 +44,10 @@
             android:theme="@style/Theme.Sherlock.Light.NoActionBar" />
         <activity
             android:name="com.nexuspad.home.ui.activity.DashboardActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name="com.nexuspad.about.activity.AboutActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name="com.nexuspad.bookmark.ui.activity.BookmarkActivity"
             android:label="@string/bookmark" />
@@ -119,7 +119,9 @@
         <activity
             android:name=".contacts.ui.activity.ContactActivity"
             android:label="@string/contacts" />
-
+        <activity
+            android:name=".contacts.ui.activity.NewContactActivity"
+            android:label="@string/contacts" />
         <activity
             android:name="com.nexuspad.ui.activity.NewFolderActivity"
             android:label="@string/new_folder" />
