--- a/project.properties
+++ b/project.properties
@@ -11,13 +11,9 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-17
-android.library.reference.1=../libs/aFileChooser/aFileChooser
-android.library.reference.2=../libs/ActionBarSherlock/actionbarsherlock
-android.library.reference.3=../libs/PhotoViewLib
-android.library.reference.4=../libs/volley
-android.library.reference.5=../libs/EdmondAppsAndroidUtils
-android.library.reference.6=../libs/NineOldAndroids/library
-android.library.reference.7=../libs/cwac-richedit
-android.library.reference.8=../libs/simple-section-adapter
-android.library.reference.9=../np-android-core
+target=android-18
+android.library.reference.1=../NexusPadCore
+android.library.reference.2=../libs/PhotoView/library
+android.library.reference.3=../libs/aFileChooser/aFileChooser
+android.library.reference.4=../libs/cwac-richedit
+android.library.reference.5=../libs/StickyListHeaders/library
