--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.nexuspad.core.permission.LISTEN_ENTRY_CHANGES" />
     <uses-permission android:name="com.nexuspad.core.permission.LISTEN_FOLDER_CHANGES" />
     <uses-permission android:name="com.nexuspad.core.permission.RECEIVE_ENTRY_LIST" />
