--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=../libs/PhotoView/library
 android.library.reference.3=../libs/aFileChooser/aFileChooser
 android.library.reference.4=../libs/cwac-richedit
 android.library.reference.5=../libs/StickyListHeaders/library
+android.library.reference.6=../libs/datetimepicker
