updated style and drawables to remove actionbarSerhlock dependency

--- a/project.properties
+++ b/project.properties
@@ -12,9 +12,8 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../NexusPadCore
-android.library.reference.2=../libs/PhotoView/library
-android.library.reference.3=../libs/aFileChooser/aFileChooser
-android.library.reference.4=../libs/cwac-richedit
-android.library.reference.5=../libs/StickyListHeaders/library
-android.library.reference.6=../libs/datetimepicker
+android.library.reference.1=../np-android-core
+android.library.reference.2=../lib/datetimepicker
+android.library.reference.3=../lib/StickyListHeaders/library
+android.library.reference.4=../lib/cwac-richedit
+android.library.reference.5=../lib/aFileChooser/aFileChooser
