--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,7 +46,7 @@
         <activity
             android:name=".home.ui.activity.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Sherlock.Light.NoActionBar" />
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" />
         <activity
             android:name=".home.ui.activity.DashboardActivity"
             android:label="@string/app_name" />
