new class in ListFragment to delegate calls to different ListViews

--- a/project.properties
+++ b/project.properties
@@ -14,6 +14,7 @@
 target=android-18
 android.library.reference.1=../np-android-core
 android.library.reference.2=../lib/datetimepicker
-android.library.reference.3=../lib/StickyListHeaders/library
-android.library.reference.4=../lib/cwac-richedit
+android.library.reference.3=../lib/cwac-richedit
+android.library.reference.4=../lib/PhotoView/library
 android.library.reference.5=../lib/aFileChooser/aFileChooser
+android.library.reference.6=../lib/StickyListHeaders/library
