--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,21 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nexuspad"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0"
+    >
 
     <uses-sdk
-        android:minSdkVersion="12"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="13"
+        android:targetSdkVersion="17"
+        />
 
     <permission
         android:name="com.nexuspad.core.permission.LISTEN_ENTRY_CHANGES"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature"
+        />
     <permission
         android:name="com.nexuspad.core.permission.LISTEN_FOLDER_CHANGES"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature"
+        />
     <permission
         android:name="com.nexuspad.core.permission.RECEIVE_ENTRY_LIST"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature"
+        />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -28,16 +33,20 @@
     <application
         android:name=".app.App"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_ab"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <service
             android:name=".app.service.UploadService"
-            android:exported="false" />
+            android:exported="false"
+            />
 
         <activity
             android:name=".home.ui.activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_ab"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,23 +56,34 @@
         <activity
             android:name=".home.ui.activity.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" />
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".home.ui.activity.DashboardActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".about.activity.AboutActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".bookmark.ui.activity.BookmarkActivity"
-            android:label="@string/bookmark" />
+            android:label="@string/bookmark"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".bookmark.ui.activity.BookmarksActivity"
-            android:label="@string/bookmarks" />
+            android:label="@string/bookmarks"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".bookmark.ui.activity.NewBookmarkActivity"
             android:exported="true"
-            android:label="@string/bookmark">
+            android:label="@string/bookmark"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -74,27 +94,42 @@
         </activity>
         <activity
             android:name=".doc.ui.activity.DocActivity"
-            android:label="@string/docs" />
+            android:label="@string/docs"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".doc.ui.activity.DocsActivity"
-            android:label="@string/docs" />
+            android:label="@string/docs"
+            android:icon="@drawable/ic_ab"
+            />
         <activity android:name=".doc.ui.activity.NewDocActivity" />
         <activity
-            android:name=".journal.ui.activity.JournalActivity"
-            android:label="@string/journal" />
+            android:name=".journal.ui.activity.JournalsActivity"
+            android:label="@string/journal"
+            android:icon="@drawable/ic_ab"
+            />
+        <activity android:name=".journal.ui.activity.NewJournalActivity" />
         <activity
             android:name=".photos.ui.activity.PhotosActivity"
-            android:label="@string/photos" />
+            android:label="@string/photos"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".photos.ui.activity.PhotoActivity"
             android:label="@string/photos"
-            android:theme="@style/Transparent" />
+            android:theme="@style/Transparent"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".photos.ui.activity.PhotosSelectActivity"
-            android:label="@string/photos" />
+            android:label="@string/photos"
+            android:icon="@drawable/ic_ab"
+            />
         <activity
             android:name=".ui.activity.UploadCenterActivity"
-            android:label="@string/photos_upload">
+            android:label="@string/photos_upload"
+            android:icon="@drawable/ic_ab"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -112,29 +147,37 @@
         </activity>
         <activity
             android:name=".photos.ui.activity.AlbumActivity"
-            android:label="@string/photos" />
+            android:label="@string/photos"
+            android:icon="@drawable/ic_ab"
+            />
         <activity android:name=".photos.ui.activity.NewAlbumActivity" />
         <activity
             android:name=".contacts.ui.activity.ContactsActivity"
-            android:label="@string/contacts" />
+            android:label="@string/contacts"
+            />
         <activity
             android:name=".contacts.ui.activity.ContactActivity"
-            android:label="@string/contacts" />
+            android:label="@string/contacts"
+            />
         <activity android:name=".contacts.ui.activity.NewContactActivity" />
         <activity android:name=".contacts.ui.activity.NewLocationActivity" />
         <activity
             android:name=".calendar.ui.activity.EventActivity"
-            android:label="@string/event" />
+            android:label="@string/event"
+            />
         <activity
             android:name=".calendar.ui.activity.EventsActivity"
-            android:label="@string/events" />
+            android:label="@string/events"
+            />
         <activity android:name=".calendar.ui.activity.NewEventActivity" />
         <activity
             android:name=".ui.activity.NewFolderActivity"
-            android:label="@string/new_folder" />
+            android:label="@string/new_folder"
+            />
         <activity
             android:name=".ui.activity.FoldersActivity"
-            android:label="@string/folders" />
+            android:label="@string/folders"
+            />
     </application>
 
 </manifest>
