--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
     <application
         android:name=".app.App"
         android:allowBackup="true"
-        android:icon="@drawable/ic_ab"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         >
