--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,6 +42,23 @@
             android:exported="false"
             />
 
+        <activity
+            android:name="com.ipaulpro.afilechooser.FileChooserActivity"
+            android:icon="@drawable/ic_chooser"
+            android:enabled="@bool/use_activity"
+            android:exported="true"
+            android:label="@string/choose_file"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.GET_CONTENT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+        </activity>
+
         <!-- android:icon is for the launcher; android:logo is for the actionBar -->
         <activity
             android:name=".home.ui.activity.MainActivity"
@@ -135,6 +152,7 @@
                 <action android:name="android.intent.action.SEND" />
 
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
 
                 <data android:mimeType="image/*" />
             </intent-filter>
@@ -142,6 +160,7 @@
                 <action android:name="android.intent.action.SEND_MULTIPLE" />
 
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.OPENABLE" />
 
                 <data android:mimeType="image/*" />
             </intent-filter>
