module-wide search function, not available for journal yet

--- a/project.properties
+++ b/project.properties
@@ -12,9 +12,7 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../lib/StickyListHeaders/library
-android.library.reference.2=../lib/datetimepicker
-android.library.reference.3=../lib/cwac-richedit
-android.library.reference.4=../lib/aFileChooser/aFileChooser
-android.library.reference.5=../np-android-core
-android.library.reference.6=../lib/EdmondAppsAndroidUtils
+android.library.reference.1=../np-android-core
+android.library.reference.2=../libs/aFileChooser/aFileChooser
+android.library.reference.3=../libs/volley
+android.library.reference.4=../libs/EdmondAppsAndroidUtils
