--- a/project.properties
+++ b/project.properties
@@ -12,7 +12,10 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../np-android-core
-android.library.reference.2=../libs/aFileChooser/aFileChooser
-android.library.reference.3=../libs/volley
-android.library.reference.4=../libs/EdmondAppsAndroidUtils
+android.library.reference.1=../libs/cwac-richedit
+android.library.reference.2=../libs/datetimepicker
+android.library.reference.3=../libs/StickyListHeaders/library
+android.library.reference.4=../np-android-core
+android.library.reference.5=../EdmondAppsAndroidUtils
+android.library.reference.6=../libs/volley
+android.library.reference.7=../libs/aFileChooser/aFileChooser
