updated About screen and some images

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,12 +23,18 @@
         android:protectionLevel="signature"
         />
 
+    <permission
+        android:name="com.nexuspad.core.permission.RECEIVE_ACCOUNT_INFO"
+        android:protectionLevel="signature"
+        />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.nexuspad.core.permission.LISTEN_ENTRY_CHANGES" />
     <uses-permission android:name="com.nexuspad.core.permission.LISTEN_FOLDER_CHANGES" />
     <uses-permission android:name="com.nexuspad.core.permission.RECEIVE_ENTRY_LIST" />
+    <uses-permission android:name="com.nexuspad.core.permission.RECEIVE_ACCOUNT_INFO" />
 
     <application
         android:name=".app.App"
