updated some frags, added default profile image

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -210,7 +210,7 @@
             android:label="@string/folders"
             />
 
-        <meta-data android:name="env" android:value="prod"/>
+        <meta-data android:name="env" android:value="lab"/>
 
     </application>
 
