--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
             <artifactId>NexusPadCore</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.android.support</groupId>
-            <artifactId>support-v4</artifactId>
-            <version>19.0.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.android.support</groupId>-->
+            <!--<artifactId>support-v4</artifactId>-->
+            <!--<version>19.0.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.squareup.picasso</groupId>
             <artifactId>picasso</artifactId>
-            <version>2.1.1</version>
+            <version>2.3.2</version>
         </dependency>
     </dependencies>
 
