hotfix for FoldersActivity crashing; fixed #34, actionbar in PhotoActivity now shows up properly

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -146,7 +146,7 @@
         <activity
             android:name=".photos.ui.activity.PhotoActivity"
             android:label="@string/photos"
-            android:theme="@style/Transparent"
+            android:theme="@style/PhotoActivity"
             android:icon="@drawable/ic_ab"
             />
         <activity
