--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,19 @@
             <version>1.2.2</version>
         </dependency>
         <dependency>
+            <groupId>com.koushikdutta.ion</groupId>
+            <artifactId>ion</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.koushikdutta.async</groupId>
+            <artifactId>androidasync</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.squareup.picasso</groupId>
             <artifactId>picasso</artifactId>
-            <version>2.3.4</version>
+            <version>2.4.0</version>
         </dependency>
     </dependencies>
 
