--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <repositories>
         <repository>
             <id>android-support</id>
-            <url>file://${env.ANDROID_HOME}/extras/android/m2repository</url>
+            <url>file://../libs</url>
         </repository>
     </repositories>
 
@@ -39,13 +39,14 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.2.4</version>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>com.github.chrisbanes.photoview</groupId>
             <artifactId>library</artifactId>
-            <version>1.2.2</version>
+            <version>1.2.4</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>com.koushikdutta.ion</groupId>
             <artifactId>ion</artifactId>
@@ -56,20 +57,16 @@
             <artifactId>androidasync</artifactId>
             <version>2.0.1</version>
         </dependency>
+        -->
         <dependency>
             <groupId>com.squareup.picasso</groupId>
             <artifactId>picasso</artifactId>
-            <version>2.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>se.emilsjolander</groupId>
-            <artifactId>stickylistheaders</artifactId>
             <version>2.5.2</version>
         </dependency>
         <dependency>
             <groupId>com.mcxiaoke.volley</groupId>
             <artifactId>library</artifactId>
-            <version>1.0.9</version>
+            <version>1.0.19</version>
         </dependency>
     </dependencies>
 
@@ -90,6 +87,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
